--- a/how-it-works.html
+++ b/how-it-works.html
@@ -11,10 +11,10 @@
 
     <nav class="bg-white border-b border-gray-100 sticky top-0 z-50 px-6 py-4">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <a href="body.html">
+            <a href="index.html">
                 <h1 class="text-2xl font-black text-swift-blue tracking-tighter">SwiftFind<span class="text-electric-cyan">.</span></h1>
             </a>
-            <a href="body.html" class="text-sm font-bold text-swift-blue underline underline-offset-4">Back to Market</a>
+            <a href="index.html" class="text-sm font-bold text-swift-blue underline underline-offset-4">Back to Market</a>
         </div>
     </nav>
 
@@ -57,7 +57,7 @@
             <div class="relative z-10">
                 <h3 class="text-2xl font-black mb-4 tracking-tight">Ready to start shopping?</h3>
                 <p class="text-blue-200 text-sm mb-8 font-medium">Join hundreds of students buying safely in Abraka.</p>
-                <a href="body.html" class="inline-block bg-electric-cyan text-swift-blue px-10 py-4 rounded-2xl font-black text-sm uppercase tracking-widest hover:scale-105 transition-transform">
+                <a href="index.html" class="inline-block bg-electric-cyan text-swift-blue px-10 py-4 rounded-2xl font-black text-sm uppercase tracking-widest hover:scale-105 transition-transform">
                     Go to Marketplace
                 </a>
             </div>
