--- a/register.html
+++ b/register.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="text-center mt-8">
-            <a href="body.html" class="text-sm font-bold text-swift-blue hover:text-electric-cyan transition underline underline-offset-4">
+            <a href="index.html" class="text-sm font-bold text-swift-blue hover:text-electric-cyan transition underline underline-offset-4">
                 ← Back to Marketplace
             </a>
         </div>
