--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 
     <nav class="bg-swift-blue text-white px-6 py-4 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <a href="body.html" class="hover:opacity-80 transition">
+            <a href="index.html" class="hover:opacity-80 transition">
                 <h1 class="text-xl font-black tracking-tighter">SwiftFind<span class="text-electric-cyan text-2xl">.</span> Dashboard</h1>
             </a>
             
