Fix nav issues in index.html

--- a/index.html
+++ b/index.html
@@ -140,5 +140,29 @@
     </div>
 
     <script src="script.js"></script>
+    <div class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-100 flex justify-around items-center py-4 px-2 z-50 md:hidden">
+    <a href="index.html" class="flex flex-col items-center gap-1">
+        <span class="text-[10px] font-black text-swift-blue uppercase tracking-tighter">Market</span>
+    </a>
+    
+    <a href="how-it-works.html" class="flex flex-col items-center gap-1">
+        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-tighter">How it Works</span>
+    </a>
+
+    <a href="add-pop.html" class="bg-swift-blue w-10 h-10 rounded-full flex items-center justify-center -mt-8 shadow-lg shadow-blue-200">
+        <span class="text-white text-2xl">+</span>
+    </a>
+
+    <a href="register.html" class="flex flex-col items-center gap-1">
+        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-tighter">Sell</span>
+    </a>
+
+    <a href="#" class="flex flex-col items-center gap-1">
+        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-tighter">Profile</span>
+    </a>
+</div>
+
+<div class="h-20 md:hidden"></div>
 </body>
+
 </html>
